--- a/css/index.css
+++ b/css/index.css
@@ -122,7 +122,7 @@ position: relative;
 #slide1 {
 background:url('../images/me.jpg') 50% 0 no-repeat fixed;
 color: #fff;
-height: 600px;
+/*height: 600px;*/
 margin: 0;
 padding: 200px 0 260px 0;
 background-size: cover;
@@ -131,10 +131,10 @@ background-size: cover;
 #slide2 {
 background-color: #fff;
 color: #333333;
-height: 600px;
+height: 700px;
 margin: 0 auto;
 overflow: hidden;
-padding: 200px 0;
+padding: 100px 0;
 }
 
 #slide3 {
@@ -149,12 +149,12 @@ background-size: cover;
 background-color: #fff;
 color: #333333;
 height: 600px;
-padding: 200px 0;
+padding: 100px 0;
 }
 
 #slide5 {
 background: url('../images/thinking.jpg') 50% 0 no-repeat fixed;
-height: 200px;
+/*height: 200px;*/
 margin: 0 auto;
 padding: 250px 0;
 color: #fff;
